--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,11 @@
 asgiref==3.2.7
+certifi==2021.10.8
 Django==3.0.5
+django-jazzmin==2.4.8
+django-tinymce==3.3.0
 django-widget-tweaks==1.4.8
+Pillow==8.4.0
 pytz==2020.1
+sentry-sdk==1.4.3
 sqlparse==0.3.1
-Pillow
-
+urllib3==1.26.7
