--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ django-jazzmin==2.4.8
 django-tinymce==3.3.0
 django-widget-tweaks==1.4.8
 Pillow==8.4.0
+psycopg2==2.9.1
 pytz==2020.1
 sentry-sdk==1.4.3
 sqlparse==0.3.1
